<resources>
    <string name="app_name">Apa sih ini?</string>
    <string name="pret">Coba deh diklik</string>
    <string name="headertext">Halo Vania Ayu Puspamaniar!</string>
    <string name="footertext">Dari Fajar Maulana Firdaus</string>
    <string name="titlebeneran">Selamat Ulang Tahun!</string>
    <string name="line1">Selamat ulang tahun yang ke-19, Vania Ayu Puspamaniar!\n\nSemoga semakin sukses di FK UNAIR, semakin berbakti kepada orang tua, makin cantik, makin pinter. Dan yang terpenting, semoga langgeng sama Eko sampe nikah nanti!\n</string>
    <string name="line2">Titip salam ya buat mama papa kamu. Jangan lupa ajarin Eci juga biar bisa jadi cowok pinter sepinter kamu! Kalo udah bisa nyetir mobil, hati-hati ya, jangan suka ngebut haha.\n</string>
    <string name="line3">Udah 19 tahun, udah pasti lah bisa mengontrol emosi hehe.\nMasih benci sama aku kan? Maaf, aku sebenernya pengen jelasin semuanya secara langsung, tapi aku tau kamu ga bakal percaya :)\nWell, cukup segini saja. Maafkan kegilaanku padamu.\n</string>
    <string name="line4">Inget janjiku dulu kan? Iya, aku sudah move on, tapi untuk menghilangkan perasaanku padamu, aku rasa tidak akan pernah bisa, sesuai janjiku dulu. Tapi aku tetep ngehormatin keputusanmu kok. Aku berharap kita bisa berteman lagi :)</string>
    <string name="branding">Created on 30 September - 2 October</string>
</resources>
